--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+<!-- adasd -->
 
 <body>
     <div class="container">
@@ -39,7 +40,7 @@
             </span>
         </form>
     </div>
-
+    <!-- tet -->
 </body>
 
 </html>
